stream-practice task is done (the method is added, stream logic fixed)